--- a/ui/css/base.css
+++ b/ui/css/base.css
@@ -42,3 +42,11 @@ div#map{
     /* right:0; */
     /* contentbottom:0 */
 }
+
+div.divroute{
+    font-weight: bold;
+    opacity: 0.8;
+    text-align: center;
+    vertical-align: middle;
+    background:#EEFFFF;
+}
